--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
   "postingInterval": 3000,
   "scrollSpeed": 1,
   "autoPlay": true,
+  "playState": "stop",
   "messages": [
     "Hear ye! A new decree is posted by the town crier!",
     "The blacksmith complains about rising iron prices again.",
